# flexa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.md
src/: .editorconfig  Flexa.sln  Interpreter.vcxproj  Interpreter.vcxproj.filters  ast.cpp  ast.hpp  bytecode.cpp  bytecode.hpp  compiler.cpp  compiler.hpp  constants.cpp  constants.hpp  debuginfo.cpp  debuginfo.hpp  dependency_resolver.cpp  dependency_resolver.hpp  exception_helper.cpp  exception_helper.hpp  flx_interpreter.cpp  flx_interpreter.hpp  flx_repl.cpp  flx_repl.hpp  flx_utils.cpp  flx_utils.hpp  gc.cpp  gc.hpp  gcobject.hpp  graphics_base.hpp  graphics_utils.cpp  graphics_utils.hpp  graphics_utils_win.cpp  graphics_utils_win.hpp  interpreter.cpp  lexer.cpp  lexer.hpp  main.cpp  md_builtin.cpp  md_builtin.hpp  md_console.cpp  md_console.hpp  (+43 more)
tests/: class_scopes.flx  lib1.flx  lib2.flx  main.flx  minimal.flx
tests/samples/: 2048.flx  2048_console.flx  2048_terminal.flx  space_invaders.flx  tetris.flx  tic-tac-toe.flx  tic-tac-toe_console.flx  tic-tac-toe_terminal.flx
tests/v1/: problems.flx
